# noise-robust-speaker-verification

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  README_demo.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
artifacts/calibration/: fixed_threshold.json  threshold.json
configs/model/: ecapa.yaml
data/: README.md
data/manifests/: manifest_all.csv  manifest_test.csv  manifest_val.csv  trials_test.csv  trials_test_noisy.csv  trials_val.csv  trials_val_noisy.csv
docs/: api_contract.md  architecture.md  decisions.md  report_outline.md
reports/sections/: 01_intro.md  02_data.md  03_model.md  04_ui.md
requirements/: base.txt  data.txt  dev.txt  model.txt  ui.txt
results/ablation/: noise_ablation.csv
results/eval/: test_scores_summary.csv  test_scores_summary.json
results/scores/: test_scores.csv  val_scores.csv  val_scores_smoke.csv
results/tables/: noise_type_summary.csv  snr_db_summary.csv
src/api/: __init__.py  main.py  models.py  routes.py  service.py  utils.py
src/data/: __init__.py  augment_noise.py  build_enrollment_audio.py  make_manifest.py  prepare_audio.py  split_manifest.py
src/eval/: __init__.py  build_ablation_table.py  evaluate_scores.py  make_noisy_trials.py  make_trials.py  metrics.py
src/inference/: __init__.py  calibrate_threshold.py  constants.py  io.py  schema.py  score_pair.py  score_trials.py  test_local.py
src/models/: __init__.py  speechbrain_verifier.py
src/ui/: __init__.py  api_client.py  gradio_app.py  mock_backend.py
(+6 files in other folders)
